# backend/Controllers/ViajesController.cs
@@ -1,7 +1,7 @@
 ﻿using BoleteriaOnline.Core.Services;
 using BoleteriaOnline.Core.Utils;
-using BoleteriaOnline.Core.ViewModels.Requests;
-using BoleteriaOnline.Core.ViewModels.Responses;
+using BoleteriaOnline.Core.ViewModels;
+using BoleteriaOnline.Core.ViewModels.Filters;
 using BoleteriaOnline.Web.Extensions.Response;
 using Microsoft.AspNetCore.Mvc;
 
@@ -21,9 +21,9 @@ public class ViajesController : ControllerBase
     [HttpGet]
     [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<ActionResult<WebResult<ICollection<ViajeResponse>>>> GetAll()
+    public async Task<ActionResult<WebResult<ICollection<ViajeDTO>>>> GetAll([FromQuery] ViajeFilter filter)
     {
-        var viajes = await _viajeservice.GetViajesAsync();
+        var viajes = await _viajeservice.AllAsync(filter);
 
         if (!viajes.Success)
             return StatusCode(ResponseHelper.GetHttpError(viajes.ErrorCode), viajes);
@@ -32,12 +32,12 @@ public class ViajesController : ControllerBase
     }
 
     [HttpGet("{id:int}")]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(WebResult<ViajeResponse>))]
+    [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<ActionResult<WebResult<ViajeResponse>>> Get(long id)
+    public async Task<ActionResult<WebResult<ViajeDTO>>> Get(int id)
     {
-        var viaje = await _viajeservice.GetViajeAsync(id);
+        var viaje = await _viajeservice.GetAsync(new ViajeFilter() { Id = id});
 
         if (!viaje.Success)
             return StatusCode(ResponseHelper.GetHttpError(viaje.ErrorCode), viaje);
@@ -46,24 +46,24 @@ public class ViajesController : ControllerBase
     }
 
     [HttpPost]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(WebResult<ViajeResponse>))]
+    [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesResponseType(StatusCodes.Status201Created)]
-    public async Task<ActionResult<WebResult<ViajeResponse>>> CreateViaje([FromBody] ViajeRequest request)
+    public async Task<ActionResult<WebResult<ViajeDTO>>> CreateViaje([FromBody] ViajeDTO request)
     {
-        var viaje = await _viajeservice.CreateViajeAsync(request);
+        var viaje = await _viajeservice.CreateAsync(request);
 
         if (!viaje.Success)
             return StatusCode(ResponseHelper.GetHttpError(viaje.ErrorCode), viaje);
         return Created(nameof(Get), viaje);
     }
 
-    [HttpPatch]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(WebResult<ViajeResponse>))]
-    public async Task<ActionResult<WebResult<ViajeResponse>>> UpdateViaje([FromBody] ViajeUpdateRequest request)
+    [HttpPatch("{id:int}")]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    public async Task<ActionResult<WebResult<ViajeDTO>>> UpdateViaje([FromBody] ViajeDTO request, int id)
     {
-        var viaje = await _viajeservice.UpdateViajeAsync(request);
+        var viaje = await _viajeservice.UpdateAsync(request, id);
 
         if (!viaje.Success)
             return StatusCode(ResponseHelper.GetHttpError(viaje.ErrorCode), viaje);
@@ -71,10 +71,10 @@ public class ViajesController : ControllerBase
     }
 
     [HttpDelete]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(WebResult<ViajeResponse>))]
-    public async Task<ActionResult<WebResult<ViajeResponse>>> DeleteViaje(long id)
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    public async Task<ActionResult<WebResult<ViajeDTO>>> DeleteViaje(int id)
     {
-        var viaje = await _viajeservice.DeleteViajeAsync(id);
+        var viaje = await _viajeservice.DeleteAsync(new ViajeFilter() { Id = id });
 
         if (!viaje.Success)
             return StatusCode(ResponseHelper.GetHttpError(viaje.ErrorCode), viaje);
